<resources>
    <string name="app_name">My App</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="title">標題</string>
    <string name="title_hint">請輸入標題</string>
    <string name="content">內容</string>
    <string name="content_hint">請輸入內容</string>
    <string name="cancel">取消</string>
    <string name="confirm">確認</string>
    <string name="title_activity_pref">PrefActivity</string>

    <string name="default_color">默認顏色</string>
    <string name="default_color_summary">新增記事的默認顏色</string>
    <string name="default_time">默認提醒時間</string>
    <string name="default_time_summary">在指定的時間之前通知</string>


    <string-array name="time_string_array">
        <item>五分鐘</item>
        <item>十分鐘</item>
        <item>二十分鐘</item>
        <item>三十分鐘</item>
        <item>六十分鐘</item>
    </string-array>

    <string-array name="time_value_array">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
    </string-array>
</resources>
